# rs-social-server-app

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: auth.rs  db.rs  main.rs
src/routes/authorization/: login.rs  password_utils.rs  registration.rs
src/routes/posts/: create_post.rs  like_post.rs
src/routes/uploader/: image_upload.rs
src/types/: collections.rs  post.rs  user.rs
src/utils/: filter_json.rs  response.rs
