[package]
name = "instagram-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
actix-web = "4.3.1"
mongodb = "2.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15.0"
regex = "1.5.6"
validator = { version = "0.16.1", features = ["derive"] }