[package]
name = "instagram-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
uuid = "1.4.1"
mime = "0.3.17"
actix-web = "4.3.1"
tempfile = "3.1"
actix-multipart = "0.6.0"
image = "0.24.6"
mongodb = "2.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15.0"
regex = "1.5.6"
validator = { version = "0.16.1", features = ["derive"] }
sanitize-filename = "0.4.0"
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
actix-service = "2.0.2"
jsonwebtoken = "8.3.0"
futures = "0.3.28"
actix-web-lab = "0.19.1"
parking_lot = "0.12.1"
actix-web-httpauth = "0.8.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
bson = "2.6.1"